fix: tighten homepage overflow and orbiting CTA spacing

--- a/scss/pc/homepage/homepage.scss
+++ b/scss/pc/homepage/homepage.scss
@@ -138,8 +138,8 @@
 					.trend-property-swiper {
 						width: 100%;
 						margin-top: 0;
-						overflow: visible;
-						padding: 10px 0 20px 0;
+						overflow: hidden;
+						padding: 10px 0 24px 0;
 						height: auto;
 						display: flex;
 						flex-direction: row;
@@ -304,8 +304,8 @@
 					.popular-property-swiper {
 						width: 100%;
 						margin-top: 0;
-						overflow: visible;
-						padding: 10px 0 20px 0;
+						overflow: hidden;
+						padding: 10px 0 24px 0;
 						height: auto;
 						display: flex;
 						flex-direction: row;
@@ -514,8 +514,8 @@
 					.top-property-swiper {
 						width: 100%;
 						margin-top: 0;
-						overflow: visible;
-						padding: 10px 0 20px 0;
+						overflow: hidden;
+						padding: 10px 0 24px 0;
 						height: auto;
 						display: flex;
 						flex-direction: row;
